--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
+    "firebase": "^10.12.2",
     "phosphor-react": "^1.4.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
