--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hello-pangea/dnd": "^16.6.0",
     "@material-tailwind/react": "^2.1.8",
     "@phosphor-icons/react": "^2.0.15",
     "@testing-library/jest-dom": "^5.17.0",
@@ -13,8 +14,9 @@
     "phosphor-react": "^1.4.1",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.21.3",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.1",
     "uuid": "^10.0.0",
