--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emailjs/browser": "^4.3.3",
     "@hello-pangea/dnd": "^16.6.0",
     "@material-tailwind/react": "^2.1.8",
     "@phosphor-icons/react": "^2.0.15",
@@ -10,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
+    "emailjs-com": "^3.2.0",
     "firebase": "^10.12.2",
     "phosphor-react": "^1.4.1",
     "postcss": "^8.4.33",
