now logs user ip addresses

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "autoprefixer": "^10.4.17",
+    "axios": "^1.7.2",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.12.2",
     "phosphor-react": "^1.4.1",
