--- a/package.json
+++ b/package.json
@@ -55,5 +55,5 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://sidewalk-survey.github.io"
+  "homepage": "https://crescendochu.github.io/access-survey"
 }
